public class Controller {

	public void buchsuche_titel__String___List<Buch>() {
		throw new UnsupportedOperationException();
	}

	public void buchdetails_id__int___Buch() {
		throw new UnsupportedOperationException();
	}

	public void showRezensionen_buchId__int___List<Rezension>() {
		throw new UnsupportedOperationException();
	}

	public void reviewHinzufuegen_id__int__r__Rezension___void() {
		throw new UnsupportedOperationException();
	}
}