public class StorageService {

	public void ladeBuecher____List<Buch>() {
		throw new UnsupportedOperationException();
	}

	public void ladeRezensionen____List<Rezension>() {
		throw new UnsupportedOperationException();
	}

	public void speichereRezension_r__Rezension___void() {
		throw new UnsupportedOperationException();
	}
}